--- a/HideMessage_web/HideMessage_web.csproj
+++ b/HideMessage_web/HideMessage_web.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.0.0-rtm-10057" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.HttpOverrides" Version="2.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
   </ItemGroup>
 
 
@@ -29,5 +30,6 @@
     <Folder Include="Models\" />
     <Folder Include="wwwroot\images\" />
     <Folder Include="Data\" />
+    <Folder Include="Logic\" />
   </ItemGroup>
 </Project>
